# ChuCaoQi-Nonebot2

./: .gitignore  README.md  create_venv.bat  earthquake.py  index.html  install_deps.bat  package-lock.json  package.json  start.bat  startbot.bat  stop.bat  vite.config.ts
bot/: bot.py  config.py  config_web.py  create_venv.bat  decorator.py  install_deps.bat  kusa_base.py  multi_platform.py  pyproject.toml  reloader.py  requirements.txt  sensitive_filter.py  startbot.bat  utils.py
bot/config/: initialize.sql  plugin_config.example.yaml  sensitive_words.example.txt
bot/dbConnection/: chat.py  db.py  kusa_field.py  kusa_item.py  kusa_system.py  models.py  user.py
bot/plugins/: __init__.py  chatGPT_api.py  draw_item.py  earthquake.py  identity_bind.py  kusa_G.py  kusa_farm.py  kusa_industrial.py  kusa_item.py  kusa_main.py  kusa_statistics.py  netease_music.py  network_report.py  notice_handler.py  pagination_helper.py  pic_archive.py  pic_classifier.py  pic_search.py  preprocessor.py  repeat_ban.py  reply_commands.py  roll_commands.py  saizeriya.py  simple_commands.py  strange_word.py  trigrams.py  weather.py  work_order.py
bot/scripts/: analyze_null_users.py  clean_null_users.py  export_initialize_sql.py  fix_dev_db.py  inspect_db.py  migrate_production.py
bot/services/: __init__.py  admin_service.py  chat_service.py  farm_service.py  gmarket_service.py  identity_service.py  industrial_service.py  item_service.py  lottery_service.py  pic_archive_service.py  statistic_service.py  warehouse_service.py
bot/text/: 公告.txt  指令帮助.txt  生草系统-指令帮助.txt
core/: config.py  (+1 more)
(+94 files in other folders)
